--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
 
                     <div class="col-md-12">
-                        <a class="read-more">See More</a>
+                        <a href="pagina2.html" class="read-more">See More</a>
                     </div>
                 </div>
             </div>
